--- a/.env
+++ b/.env
@@ -1,1 +1,16 @@
-    SERVER_PORT=9001
+SERVER_PORT=9002
+
+DB_HOST=localhost
+DB_PORT=27017
+DATABASE=general
+MONGO_USER=admin
+MONGO_PASSWORD=admin123
+
+RABBITMQ_HOST=localhost
+RABBITMQ_PORT=5672
+RABBITMQ_USERNAME=admin
+RABBITMQ_PASSWORD=admin
+
+DISCOVERY_URL=http://localhost:8999/eureka/
+EUREKA_HOST=localhost
+ACTIVE_PROFILE=complete
