--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: ${SERVER_PORT:9001}
+  port: ${SERVER_PORT:9002}
 
 spring:
   application:
@@ -7,14 +7,20 @@ spring:
   config:
     import: optional:dotenv
   data:
-    redis:
-      host: ${REDIS_HOST:localhost}
-      port: ${REDIS_PORT:6379}
+    mongodb:
+      uri: mongodb://${MONGO_USER:admin}:${MONGO_PASSWORD:admin123}@${DB_HOST:localhost}:${DB_PORT:27017}/${DATABASE:general}?authSource=admin
+  rabbitmq:
+    host: ${RABBITMQ_HOST:localhost}
+    port: ${RABBITMQ_PORT:5672}
+    username: ${RABBITMQ_USERNAME:admin}
+    password: ${RABBITMQ_PASSWORD:admin}
 
 eureka:
   client:
     service-url:
-      defaultZone: ${DISCOVERY-URL:9000}
+      defaultZone: ${DISCOVERY-URL:http://localhost:8999/eureka/}
+    register-with-eureka: true
+    fetch-registry: true
   instance:
     metadata-map:
       protocol: websocket
